<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:layout_height="wrap_content">




        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/UserName_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name_edt_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person"
                    android:gravity="center"
                    android:maxLength="12" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_sumbit_username"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/light_green"
                android:text="@string/sumbit_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView45"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/textView49"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/needToInternetAlert_txt"
                app:layout_constraintEnd_toEndOf="@+id/user_name_input_layout"
                app:layout_constraintStart_toStartOf="@+id/user_name_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/user_name_input_layout" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/shouldToUseENLang_txt"
                app:layout_constraintEnd_toEndOf="@+id/textView49"
                app:layout_constraintStart_toStartOf="@+id/textView49"
                app:layout_constraintTop_toBottomOf="@+id/textView49" />


        </androidx.constraintlayout.widget.ConstraintLayout>










</androidx.constraintlayout.widget.ConstraintLayout>